# Recall

./: .env.test_verification  .gitignore  CLAUDE.md  PHASE20_PLAN.md  README.md  claude-plugin.json  docker-compose.neo4j.yml  graphiti_hook_timing_test.py  install.sh  pyproject.toml  spike_notes.txt  test_toon_encoding.py  verify_phase_71_test_file.py
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  phase-10-RESEARCH.md  v1.1-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: verify_all.py  verify_phase_06.py  verify_phase_09.py  verify_phase_10.py  verify_phase_11.py  verify_phase_12.py  verify_phase_13.py  verify_phase_14.py  verify_phase_16.py  verify_phase_71.py
src/: config.py
src/capture/: conversation.py  git_capture.py  git_worker.py  summarizer.py
src/cli/: __init__.py  output.py  utils.py
src/config/: paths.py
src/db/: __init__.py  manager.py  schema.py
src/extractor/: __init__.py  connector.py  engine.py  git_walker.py  (+1 more)
tests/: conftest.py  test_backend_config.py  test_backend_integration.py  test_capture_modes.py  test_claude_cli_client.py  test_cli_commands.py  test_cli_foundation.py  test_cli_rename.py  test_config_v3.py  test_extraction_phase21.py  test_global_hooks_installer.py  test_graph_service_retention.py  test_graph_service_ui.py  test_health_command.py  test_hooks_phase15.py  test_hooks_phase20.py  test_indexer_batch.py  test_install_cmd.py  test_llm_client_v3.py  test_llm_config.py  test_llm_health_v3.py  test_mcp_server.py  test_phase19_integration.py  test_provider.py  test_queue_worker_dispatch.py  test_reactivation.py  test_record_access.py  test_retention_config.py  test_retention_integration.py  test_retention_manager.py  test_security.py  test_storage.py  test_sync_command.py  test_ui_command.py  test_ui_server.py
ui/: .gitignore  index.html  next.config.ts  package-lock.json  package.json  vite.config.ts
(+284 files in other folders)
