[project]
name = "recall-kg"
version = "0.1.0"
description = "Engineering knowledge graph — extracts decisions, patterns, and bugs from git history"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "GitPython>=3.1.0",
    "httpx>=0.28.0",
    "mcp[cli]>=1.26.0,<2.0.0",
    "structlog>=25.5.0",
    "starlette>=0.37.0",
    "typer>=0.15.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
recall = "src.cli:cli_entry"
rc = "src.cli:cli_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
